<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ucb.desafioacademia.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="368dp"
        android:layout_height="503dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/btn_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:text="@string/dados_pessoais" />

        <Button
            android:id="@+id/btn_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_user_info"
            android:layout_alignStart="@+id/btn_user_info"
            android:layout_below="@+id/btn_user_info"
            android:layout_marginTop="30dp"
            android:text="@string/dias_treino" />

        <TextView
            android:id="@+id/txt_user_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_user_info"
            android:layout_alignParentTop="true"
            android:layout_marginTop="11dp"
            android:text="@string/usuario_online" />

        <TextView
            android:id="@+id/txt_user_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt_user_online"
            android:layout_alignBottom="@+id/txt_user_online"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/txt_user_online"
            android:text="@string/empty_text" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
