<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ucb.desafioacademia.activities.DetailUserActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="365dp"
        android:layout_height="241dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/label_nome_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/nome"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_nome_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/label_nome_usuario"
            android:layout_below="@+id/label_nome_usuario"
            android:layout_marginTop="10dp"
            android:text="@string/empty_text" />

        <TextView
            android:id="@+id/label_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/label_nome_usuario"
            android:layout_below="@+id/label_nome_usuario"
            android:layout_marginTop="60dp"
            android:text="@string/telefone"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/label_telefone"
            android:layout_below="@+id/label_telefone"
            android:layout_marginTop="10dp"
            android:text="@string/empty_text" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/label_telefone"
            android:layout_below="@+id/label_telefone"
            android:layout_marginTop="60dp"
            android:text="@string/email"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/label_email"
            android:layout_below="@+id/label_email"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:text="@string/empty_text" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_compartilhar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/compartilhar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
