<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ucb.desafioacademia.activities.DetailTreinoActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="368dp"
        android:layout_height="503dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/label_dia_semana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/dia_semana"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_dia_semana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/label_dia_semana"
            android:layout_below="@id/label_dia_semana"
            android:layout_marginTop="10dp"
            android:text="@string/empty_text" />

        <TextView
            android:id="@+id/label_membro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/label_dia_semana"
            android:layout_below="@id/label_dia_semana"
            android:layout_marginTop="60dp"
            android:text="@string/membro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_membro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/label_membro"
            android:layout_below="@id/label_membro"
            android:layout_marginTop="10dp"
            android:text="@string/empty_text" />

        <TextView
            android:id="@+id/label_nome_treino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/label_membro"
            android:layout_below="@id/label_membro"
            android:layout_marginTop="60dp"
            android:text="@string/nome_treino"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_nome_treino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/label_nome_treino"
            android:layout_below="@id/label_nome_treino"
            android:layout_marginTop="10dp"
            android:text="@string/empty_text" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
